# LogGrad

./: CMakeLists.txt  README.md
script/: loggrad.py
script/results/: berkeleydb.out  httpd.out  lighttpd.out  monetdb.out  mongrel2.out  mysql.out  nginx.out  postgresql.out
src/: FindLoggedSnippet.cpp  LogGrad.cpp
test/bftpd/: bftpdutmp.c.bc  bftpdutmp.c.ll  commands.c.bc  commands_admin.c.bc  cwd.c.bc  dirlist.c.bc  list.c.bc  logging.c.bc  login.c.bc  main.c.bc  md5.c.bc  mystring.c.bc  options.c.bc
